--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     </header>
 
     <main>
-
+        
     </main>
 
     <footer>
-
+        <!--Rodapé do Site-->
+            <p>© 2023 Toque de Arte. Todos os direitos reservados</p>    
     </footer>
 </body>
 
