--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/cortinas-banner.jpg" alt="banner da categoria">
+                    <img src="imagens/promocao.jpg" alt="banner da categoria">
                 </a>
             </div>
 
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/2.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/3.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/4.jpeg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/persianas/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/persianas/2.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/divisoria hospitalar/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/5.jpeg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -155,7 +155,7 @@
             
             <div class="bloco-itens">
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/6.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/8.webp" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/persianas/6.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/2.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/persianas/7.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -200,7 +200,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/persianas/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/3.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -242,7 +242,7 @@
             
             <div class="bloco-itens">
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/2.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/3.jpeg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -269,7 +269,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/4.webp" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/5.jpeg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -287,7 +287,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/6.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/7.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -305,7 +305,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/novidades/8.webp" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
