--- a/login.html
+++ b/login.html
@@ -25,9 +25,9 @@
 
         <div id="menu-topo">
             <ul>
-                <li><a><img src="imagens/entrar.png"></a></li>
-                <li><a><img src="imagens/favoritos.png"></a></li>
-                <li><a><img src="imagens/carrinho.png"></a></li>
+                <li><a href="login.html"><img src="imagens/entrar.png"></a></li>
+                <li><a href=""><img src="imagens/favoritos.png"></a></li>
+                <li><a href=""><img src="imagens/carrinho.png"></a></li>
             </ul>
         </div>
     </header>
