--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div id="menu-topo">
             <ul>
-                <li><a href=""><img src="imagens/entrar.png"></a></li>
+                <li><a href="/login.html"><img src="imagens/entrar.png"></a></li>
                 <li><a href=""><img src="imagens/favoritos.png"></a></li>
                 <li><a href=""><img src="imagens/carrinho.png"></a></li>
             </ul>
@@ -43,16 +43,20 @@
 
         <section class="categorias"><!--Categorias-->
             <div class="cat">
-                <div><a><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                <h1>Cortinas</h1>
+                <div><a><img src="imagens/cortinas/1.jpg" alt=""></a></div>
             </div>
             <div class="cat">
-                <div><a><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                <h1>Percianas</h1>
+                <div><a><img src="imagens/persianas/1.jpg" alt=""></a></div>
             </div>
             <div class="cat">
-                <div><a><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                <h1>Divisoria hospitalares</h1>
+                <div><a><img src="imagens/divisorias hospitalares/1.jpg" alt=""></a></div>
             </div>
             <div class="cat">
-                <div><a><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                <h1>Toldos</h1>
+                <div><a><img src="imagens/toldos/1.jpg" alt=""></a></div>
             </div>
         </section>
 
@@ -60,7 +64,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/promocao.jpg" alt="banner da categoria">
+                    <img src="imagens/banner-promocao.png" alt="banner da categoria">
                 </a>
             </div>
 
@@ -68,7 +72,7 @@
             
             <div class="bloco-itens">
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -122,7 +126,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/divisoria hospitalar/1.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/divisorias hospitalares/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -147,7 +151,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/cortinas-banner.jpg" alt="banner da categoria">
+                    <img src="imagens/banner-mais-vendidas.png" alt="banner da categoria">
                 </a>
             </div>
 
@@ -218,7 +222,7 @@
                     </div>
                 </div>
                 <div class="itens">
-                    <div class="itens-img"><a href=""><img src="imagens/cortinas/cortina-blakout.jpg" alt=""></a></div>
+                    <div class="itens-img"><a href=""><img src="imagens/cortinas/1.jpg" alt=""></a></div>
                     <div class="itens-descricao">
                         <div><p class="texto-limitado">wefwefwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwefwefwefwefwefwefwefweffffffffffffffffffffffffffffffffffffffwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwef</p></div>
                         <p><s>R$22.00</s></p>
@@ -234,7 +238,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/cortinas-banner.jpg" alt="banner da categoria">
+                    <img src="imagens/banner-novidade.png" alt="banner da categoria">
                 </a>
             </div>
 
