Mudando as legendas dos produtos

--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
     </main>
 
     <footer><!--Rodapé do Site-->
-        <p>© 2023 Toque de Arte. Todos os direitos reservados</p>    
+        <p>© 2023 Dona Maria Cortinas e Cia. Todos os direitos reservados</p>    
     </footer>
 
 </body>
