--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-topo">
-            <a href="index.html"><img src="imagens/logo-dona-maria-1.png"></a>
+            <a href="index.html"><img src="imagens/elementos-do-site/logo-dona-maria-1.png"></a>
         </div>
         
         <div class="barra-pesquisa">
@@ -19,15 +19,15 @@
                     <input type="text" id="nome" name="nome" placeholder="O que você procura?" required>
                 </label>
 
-                <button><img src="imagens/lupa.png"></button>
+                <button><img src="imagens/elementos-do-site/lupa.png"></button>
             </form>
         </div>
 
         <div id="menu-topo">
             <ul>
-                <li><a href="login.html"><img src="imagens/entrar.png"></a></li>
-                <li><a href=""><img src="imagens/favoritos.png"></a></li>
-                <li><a href=""><img src="imagens/carrinho.png"></a></li>
+                <li><a href="paginas/login.html"><img src="imagens/elementos-do-site/entrar.png"></a></li>
+                <li><a href=""><img src="imagens/elementos-do-site/favoritos.png"></a></li>
+                <li><a href=""><img src="imagens/elementos-do-site/carrinho.png"></a></li>
             </ul>
         </div>
 
@@ -37,7 +37,7 @@
 
         <div class="banner-top"><!--Banner-->
             <a href="">
-                <img src="imagens/cortinas-banner.jpg" alt="banner">
+                <img src="imagens/banner/cortinas-banner.jpg" alt="banner">
             </a>
         </div>
 
@@ -64,7 +64,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/banner-promocao.png" alt="banner da categoria">
+                    <img src="imagens/banner/banner-promocao.png" alt="banner da categoria">
                 </a>
             </div>
 
@@ -151,7 +151,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/banner-mais-vendidas.png" alt="banner da categoria">
+                    <img src="imagens/banner/banner-mais-vendidas.png" alt="banner da categoria">
                 </a>
             </div>
 
@@ -230,7 +230,7 @@
 
             <div class="banner-categoria"><!--Banner-->
                 <a href="">
-                    <img src="imagens/banner-novidade.png" alt="banner da categoria">
+                    <img src="imagens/banner/banner-novidade.png" alt="banner da categoria">
                 </a>
             </div>
 
