--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="estilo.css" rel="stylesheet">
+        <link href="../estilo.css" rel="stylesheet">
         <title>Cadastro</title>
 </head>
 <body>
 
     <header>
         <div class="logo-topo">
-            <a href="index.html"><img src="imagens/logo-dona-maria-1.png"></a>
+            <a href="../index.html"><img src="../imagens/elementos-do-site/logo-dona-maria-1.png"></a>
         </div>
         
         <div class="barra-pesquisa">
@@ -19,15 +19,15 @@
                     <input type="text" id="nome" name="nome" placeholder="O que você procura?" required>
                 </label>
 
-                <button><img src="imagens/lupa.png"></button>
+                <button><img src="../imagens/elementos-do-site/lupa.png"></button>
             </form>
         </div>
 
         <div id="menu-topo">
             <ul>
-                <li><a href="/login.html"><img src="imagens/entrar.png"></a></li>
-                <li><a href=""><img src="imagens/favoritos.png"></a></li>
-                <li><a href=""><img src="imagens/carrinho.png"></a></li>
+                <li><a href="login.html"><img src="../imagens/elementos-do-site/entrar.png"></a></li>
+                <li><a href=""><img src="../imagens/elementos-do-site/favoritos.png"></a></li>
+                <li><a href=""><img src="../imagens/elementos-do-site/carrinho.png"></a></li>
             </ul>
         </div>
     </header>
