--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="paginas/login.html"><img src="imagens/elementos-do-site/entrar.png"></a></li>
                 <li><a href=""><img src="imagens/elementos-do-site/favoritos.png"></a></li>
-                <li><a href=""><img src="imagens/elementos-do-site/carrinho.png"></a></li>
+                <li><a href="paginas/carrinho.html"><img src="imagens/elementos-do-site/carrinho.png"></a></li>
             </ul>
         </div>
 
