--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -42,23 +42,62 @@
         <div class="compras-do-carrinho">
             <div class="produtos-carrinho">
                 <div class="pro-carrinho">
-                    <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt=""></div>
-                    <div>
+                    <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
+                    <div class="pro-car-informacoes">
                         <div>
-                            <p>ergergergergergergergergergergergergerg</p>
-                            <h2>Preço: R$150.00</h2>
+                            <p>Cortina polyone branca 1,40x2,80m 1 Folha Inspire</p>
+                            <h2>R$ 110,00</h2>
                         </div>
                         <div>
-                            
+                            <p>wfwef</p>
                         </div>
                     </div>
                 </div>
-                <div class="pro-carrinho">fgh</div>
-                <div class="pro-carrinho">fgh</div>
+                <div class="pro-carrinho">
+                    <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
+                    <div class="pro-car-informacoes">
+                        <div>
+                            <p>Cortina polyone azul 1,40x2,80m 1 Folha Inspire</p>
+                            <h2>R$ 1200,00</h2>
+                        </div>
+                        <div>
+                            <p>wfwef</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pro-carrinho">
+                    <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
+                    <div class="pro-car-informacoes">
+                        <div>
+                            <p>Cortina polyone fosco 1,40x2,80m 1 Folha Inspire</p>
+                            <h2>R$ 120,00</h2>
+                        </div>
+                        <div>
+                            <p>wfwef</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="comprar-carrinho">
-                <div class="frete">fgh</div>
-                <div class="preco">fgh</div>
+                <div class="frete">
+                    <div>
+                        <h2>Cálculo do Frete</h2>
+                        <p>Para finalizar sua compra, digite o número do seu CEP para calcular o frete do seu pedido</p>
+                    </div>
+                    <div>
+                        <p>Digite seu CEP:</p>
+                        <form action="" method="post">
+                            <label>
+                                <input class="input-frete" type="text" id="cep" name="cep" placeholder="CEP" required>
+                            </label>
+                        </form>
+                        <p>Ex: 00000-000</p>
+                    </div>
+                </div>
+                <div class="preco">
+                    <div><h3>Subtotal: R$ 1430,00</h3></div>
+                    <div><h2>Total estimado: R$ 1430,00</h2></div>
+                </div>
             </div>
         </div>
         
