--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -36,7 +36,7 @@
 
         <div class="titulo-carrinho">
             <h2>Meu Carrinho</h2>
-            <button>Continuar Comprando ></button>
+            <button><a href="/index.html">Continuar Comprando ></a></button>
         </div>
 
         <div class="compras-do-carrinho">
@@ -44,7 +44,7 @@
                 <div class="pro-carrinho">
                     <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
                     <div class="pro-car-informacoes">
-                        <div>
+                        <div class="carrinho-text">
                             <p>Cortina polyone branca 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 110,00</h2>
                         </div>
@@ -56,7 +56,7 @@
                 <div class="pro-carrinho">
                     <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
                     <div class="pro-car-informacoes">
-                        <div>
+                        <div class="carrinho-text">
                             <p>Cortina polyone azul 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 1200,00</h2>
                         </div>
@@ -68,7 +68,7 @@
                 <div class="pro-carrinho">
                     <div class="img-carrinho"><img src="../imagens/cortinas/1.jpg" alt="Imagem da cortina"></div>
                     <div class="pro-car-informacoes">
-                        <div>
+                        <div class="carrinho-text">
                             <p>Cortina polyone fosco 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 120,00</h2>
                         </div>
