--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -48,9 +48,18 @@
                             <p>Cortina polyone branca 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 110,00</h2>
                         </div>
-                        <div>
-                            <p>wfwef</p>
+
+                        <div class="adicionar-lixeira">
+                            <div class="adicionar-carrinho">
+                                <button class="mais"><img src="../imagens/carrinho/mais 1.png"></button>
+                                <p>1</p>
+                                <button class="menos"><img src="../imagens/carrinho/menos 1.png"></button>
+                            </div>
+                            <div class="lixeira-carrinho">
+                                <img src="../imagens/carrinho/lixeira 1.png">
+                            </div>
                         </div>
+
                     </div>
                 </div>
                 <div class="pro-carrinho">
