--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -69,8 +69,15 @@
                             <p>Cortina polyone azul 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 1200,00</h2>
                         </div>
-                        <div>
-                            <p>wfwef</p>
+                        <div class="adicionar-lixeira">
+                            <div class="adicionar-carrinho">
+                                <button class="mais"><img src="../imagens/carrinho/mais 1.png"></button>
+                                <p>1</p>
+                                <button class="menos"><img src="../imagens/carrinho/menos 1.png"></button>
+                            </div>
+                            <div class="lixeira-carrinho">
+                                <img src="../imagens/carrinho/lixeira 1.png">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -81,8 +88,15 @@
                             <p>Cortina polyone fosco 1,40x2,80m 1 Folha Inspire</p>
                             <h2>R$ 120,00</h2>
                         </div>
-                        <div>
-                            <p>wfwef</p>
+                        <div class="adicionar-lixeira">
+                            <div class="adicionar-carrinho">
+                                <button class="mais"><img src="../imagens/carrinho/mais 1.png"></button>
+                                <p>1</p>
+                                <button class="menos"><img src="../imagens/carrinho/menos 1.png"></button>
+                            </div>
+                            <div class="lixeira-carrinho">
+                                <img src="../imagens/carrinho/lixeira 1.png">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -104,8 +118,8 @@
                     </div>
                 </div>
                 <div class="preco">
-                    <div><h3>Subtotal: R$ 1430,00</h3></div>
-                    <div><h2>Total estimado: R$ 1430,00</h2></div>
+                    <div><h3>Subtotal:</h3> <h3 class="valor">R$ 1430,00</h3></div>
+                    <div><h2>Total estimado:</h2> <h2 class="valor">R$ 1430,00</h2></div>
                 </div>
             </div>
         </div>
