--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -36,7 +36,7 @@
 
         <div class="titulo-carrinho">
             <h2>Meu Carrinho</h2>
-            <a href="/index.html"><button>Continuar Comprando ></button></a>
+            <a href="../index.html"><button>Continuar Comprando ></button></a>
         </div>
 
         <div class="compras-do-carrinho">
