--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -42,6 +42,12 @@
                     <label>Nome Completo:
                         <input type="text" id="nome" name="nome" required>
                     </label>
+                    <label>CPF:
+                        <input type="text" id="cpf" name="cpf" maxLength="11" required>
+                    </label>
+                    <label>Telefone:
+                        <input type="text" id="telefone" name="telefone" maxLength="11" required>
+                    </label>
                     <label>E-mail:
                         <input type="email" id="email" name="email" required>
                     </label>
