--- a/paginas/login.html
+++ b/paginas/login.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="logo-topo">
-            <a href="../index.html"><img src="../imagens/elementos-do-site/logo-dona-maria-1.png"></a>
+            <a href="../index.php"><img src="../imagens/elementos-do-site/logo-dona-maria-1.png"></a>
         </div>
         
         <div class="barra-pesquisa">
