--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -26,7 +26,7 @@
         <div id="menu-topo">
             <ul>
                 <li><a href="login.html"><img src="../imagens/elementos-do-site/entrar.png"></a></li>
-                <li><a href=""><img src="../imagens/elementos-do-site/favoritos.png"></a></li>
+                <li><a href="favoritos.php"><img src="../imagens/elementos-do-site/favoritos.png"></a></li>
                 <li><a href="carrinho.html"><img src="../imagens/elementos-do-site/carrinho.png"></a></li>
             </ul>
         </div>
